css/core.css
/* INIT ***********************************************************************/
pre,textarea{overflow:auto}html,table{border-collapse:collapse}audio:not([controls]),template{display:none}details,main,summary{display:block}input[type=number]{width:auto}input[type=search]{-webkit-appearance:textfield}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}progress{display:inline-block}small{font-size:75%}[unselectable]{user-select:none}*,::after,::before{box-sizing:inherit;text-decoration:inherit;vertical-align:inherit;border-style:solid;border-width:0}*{color:inherit;font-family:inherit;font-size:inherit;font-style:inherit;line-height:inherit;border-collapse:inherit}*,:after,:before,body,html{margin:0;padding:0;outline:0;border:none}:root{-ms-overflow-style:-ms-autohiding-scrollbar;overflow-y:scroll;text-size-adjust:100%;box-sizing:border-box;cursor:default;font-family:sans-serif;line-height:1.5em;text-rendering:optimizeLegibility;vertical-align:top}a{text-decoration:none;}button,input,select,textarea{background:0 0}code,kbd,pre,samp{font-family:monospace,monospace}input{min-height:1.5em}nav ol,nav ul, ol, ul{list-style:none}select{-moz-appearance:none;-webkit-appearance:none}select::-ms-expand{display:none}select::-ms-value{color:currentColor}textarea{resize:vertical}::selection{color:#fff;background-color:#444;text-shadow:none}@media screen{[hidden~=screen]{display:inherit}[hidden~=screen]:not(:active):not(:focus):not(:target){clip:rect(0 0 0 0)!important;position:absolute!important}}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0;border:none}button{overflow:visible}table{border-spacing:0}:not(body){background-repeat:no-repeat;background-position:50%;background-size:cover}[hidden]{display:none!important}
sub, sup { 
    vertical-align: baseline; 
    font-size: 80%;
    line-height: 0; 
    position: relative;
    text-decoration: none;
    border: none;
}
sup { 
    top: -0.5rem; 
}
sub { 
    bottom: -0.25rem; 
}
button {
    cursor: pointer;
}
strong {
    vertical-align: baseline;
}

/* DEFAULT FONTS **************************************************************/
html,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
li,
i,
time,
small {
    font-family: "Open Sans", "Helvetica Neue", "Verdana", sans-serif;
    word-wrap: break-word;
    font-weight: 400;
}

p,
a:not(.u-link-reset),
li,
i,
time {
    line-height: 1.8rem;
    font-size: 1.2rem;
}

code {
    font-family: "Menlo", "Lucida Console", monospace;
    font-size: 1rem;
    /* word-wrap: break-word; */
}
h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code,
p code,
i code,
a code,
li code {
    display: inline;
    padding: .2rem .4rem;
    vertical-align: baseline;
    margin: 0;
    border-radius: .3rem;
    white-space: nowrap;
}

i,
em {
    font-style: italic;
}

h1 {
    font-size: 2.4rem;
    line-height: 3.6rem;
}
h2 {
    font-size: 1.8rem;
    line-height: 2.6rem;
}
h3 {
    font-size: 1.4rem;
}

/* DEFAULT LINKS **************************************************************/
a:link:not(.u-link-reset) {
    color: #006fff;
    border-bottom: .15rem dotted;
}
a:hover:not(.u-link-reset),
a:focus:not(.u-link-reset),
a:active:not(.u-link-reset) {
    color: #006fff;
    border-bottom: .15rem solid;
}
a:visited:not(.u-link-reset) {
    color: #8a8a8a;
    border-bottom: .15rem dotted;
}

/* DEFAULT COLOR **************************************************************/
html {
    color: black;
}
body {
    background-color: white;
}

code {
    background-color: black;
    color: #65ff46;
}

/* LAYOUT ETC *****************************************************************/
html, body {
    height: 100%;
    width: 100%;
}
li {
    margin-bottom: .6rem;
}
sup span {
    padding: .1rem;
}
code {
    display: block;
    border-radius: .5rem;
    padding: 1rem;
    margin-bottom: 1rem;
    overflow: scroll;
}

.selfie {
    width: 80%;
    height: 80%;
    display: block;
    max-width: 16rem;
    max-height: 16rem;
    margin-right: auto;
    margin-left: auto;
    border-radius: 50%;
    border: 8px solid;
    background-image: url("/img/selfie.jpg");
    background-size: 105% 105%;
    background-repeat: no-repeat;
    background-position: center;
    box-sizing: content-box;
    border-color: #006fff;
}

.iconsprite {
    margin-right: 1rem;
    display: inline-block;
    margin-bottom: 1rem;
}
.iconsprite::before {
    content: "";
    display: inline-block;
    width: 36px;
    height: 36px;
    margin-right: .5rem;
    margin-left: 1rem;
    margin-top: -.4rem;
    background: url(/img/iconSprite.svg);
    background-size: auto 36px;
    background-repeat: no-repeat;
}
.iconsprite-github::before {
    background-position: 0 0
}
.iconsprite-spotify::before {
    background-position: -36px 0;
}
.iconsprite-email::before {
    background-position: -72px 0;
}

main {
    min-height: calc(100% - 10rem);
    width: 100%;
    padding: 1rem;
}

main > section:not(.full-width),
main > article:not(.full-width),
main > div > section:not(.full-width),
main > div > article:not(.full-width) {
    max-width: 44rem;
    margin: 0 auto 4rem auto;
}

nav {
    max-width: 44rem;
    margin: 0 auto 0 auto;
    padding: 1.3rem .5rem 1rem .5rem;
}

header, footer {
    min-height: 4rem;
    width: 100%;
}

header {
}
.link-nav, .masthead {
    display: inline-block;
}
.masthead {
    margin-right: 8%;
}
.link-nav {
    padding: 0 .3rem;
    margin-right: 4%;
}

footer {
    text-align: center;
    padding: 1rem;
}

.paragraph-group {
    margin-bottom: 3rem;
}
.blog-post p,
.blog-post ul,
.blog-post ol {
    padding-bottom: 1.4rem;
}
.blog-post h2 {
    padding-bottom: 1rem;
}
.blog-post ul {
    position: relative;
}
.blog-post ul li {
    padding: 0 1rem;
}
.blog-post ol li {
    margin-left: 1.2rem;
    margin-right: 1.2rem;
    padding: 0 .5rem;
}
.blog-post ul li::before { /* If we do it the normal way, the bullet is way too big. */
    content:"•";
    position: absolute;
    left: 0;
}
.blog-post ol {
    list-style: decimal outside none;
}
ol.footnotes {
    list-style: decimal inside none;
}
ol.footnotes li {
    margin-left: 0;
    margin-right: 0;
}

.post-start {
    text-align: center;
    margin-bottom: 2rem;
}
.post-list-post-title {
    display: inline-block;
    margin-bottom: .5rem;
    border-bottom: none;
}
.post-list li {
    margin-bottom: 4rem;
}
.post-list p {
    margin-bottom: 1rem;
    display: block;
}
.post-list time {
    display: block;
    margin-bottom: 1rem;
}

.about-me-section p {
    margin-bottom: 0;
}

.social-links-div {
    display: block;
}

.portfolio-section {
    width: 100%;
    text-align: center;
}
.portfolio-section > div {
    min-width: 12rem;
    min-height: 12rem;
    max-width: calc(100% - 4rem);
    margin: 1rem;
    display: inline-block;
    vertical-align: middle;
    position: relative;
}
.portfolio-section img {
    max-width: 100%;
    max-height: 100%;
    cursor: pointer;
}
.portfolio-section > div > div {
    padding: 1rem;
    background-color: rgba(0,0,0,.75);
    position: absolute;
    left: -1rem;
    top: -1rem;
    width: calc(100% + 2rem);
    height: calc(100% + 2rem);
    border-radius: .5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    cursor: pointer;
}
.portfolio-section > div > div > p {
    width: 100%;
    color: white;
}

/* FONTS **********************************************************************/
.masthead {
    font-size: 2.4rem;
    line-height: 2rem;
}
.post-list-post-title {
    font-size: 2.4rem;
    line-height: 3.6rem;
}

/* LINKS **********************************************************************/
.link-nav,
.link-nav:link,
.link-nav:hover,
.link-nav:focus,
.link-nav:active,
.link-nav:visited {
    color: white !important; /* Gets overriden otherwise */
    line-height: 2rem;
}
.post-list-post-title {
    color: #006fff;
}
.post-list-post-title:visited {
    color: #8a8a8a;
}

/* COLOR **********************************************************************/
header, footer {
    background-color: #006fff;
    color: white;
}

.post-list time,
.post-start time {
    color: #888888;
}

/* NARROW SCREENS *************************************************************/
@media (max-width: 36rem) {

    h1 {
        font-size: 2.2rem;
        line-height: 3rem;
    }
    h2 {
        font-size: 1.7rem;
        line-height: 2.6rem;
    }
    h3 {
        font-size: 1.4rem;
    }

    p,
    a,
    li,
    i,
    time {
        line-height: 1.8rem;
        font-size: 1.1rem;
    }
    code {
        font-size: 1rem;
    }

    .masthead {
        display: block;
        padding-right: 0;
    }
    .link-nav {
        line-height: 1.6rem;
    }

    nav {
        text-align: center;
    }

}
/* UTILITIES ******************************************************************/

/* Use for linking to something on the same page, instead of an anchor tag. */
.u-link-onpage {}
.u-backbutton-link-onpage {
    position: absolute;
    top: -3rem;
    right: 3rem;
}

.u-position-relative {
    position: relative;
}

.u-left {
    float: left !important;
}
.u-right {
    float: right !important;
}
.u-center {
    text-align: center !important;
}

/* .u-link-reset: Resets the link to its inherited appearance, so it can be styled individually. */
.u-link-reset{}

/* Something that looks (and probably acts) like a link, but isn't really an <a> */
.u-link-pseudo {
    color: #006fff !important;
    border-bottom: .15rem dotted !important;
    cursor: pointer !important;
}
.u-link-pseudo:hover,
.u-link-pseudo:focus,
.u-link-pseudo:active {
    border-bottom: .15rem solid !important;
    cursor: pointer !important;
}
.u-link-pseudo-no-underline {
    color: #006fff !important;
    cursor: pointer !important;
}

/* Use for external links. Adds an icon to tell the user the URL is on a different site. */
.u-link-external {
    position: relative;
    margin-right: 1rem;
}
.u-link-external::after {
    content: "";
    display: inline-block;
    background: url(/img/iconSprite.svg);
    background-repeat: no-repeat;
    width: 10px;
    height: 10px;
    background-size: auto 10px;
    background-position: -30px 0;
    position: absolute;
    top: 20%;
    right: -.8rem;
}

/* Button - simple */
.u-button-simple {
    border-radius: .5rem;
    border: .2rem solid #006fff;
    color: #006fff;
    padding: .3rem;
    background-color: white;
}

/* Loading notification */
.u-notification-loading {
    border-radius: .5rem;
    border: .2rem solid white;
    background-color: #006fff;
    text-align: center;
    color: white;
    padding: 1rem;
    position: fixed;
    width: 20rem;
    height: 6rem;
    margin: 0 auto;
    left: 0;
    right: 0;
    top: 40%;
}



/* State utility classes - these are meant to be added or removed to turn them on and off */

/* Use to hide things and remove them from document flow */
.u-_is-absent {
    display: none !important;
}

/* Use to hide things */
.u-_is-invisible {
    visibility: hidden !important;
}

.u-_lookatme {
    animation-name: lookatme;
    animation-duration: 1.5s; 
    animation-timing-function: linear; 
    animation-iteration-count: 1;
}
    @keyframes lookatme {
        0%,100% {
            background-color: inherit;
            color: inherit;
        }
        10%,80% {
            background-color: #ffdd00;
            color: black;
        }
    }

